// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dragAndDrop should allow drag and drop to 0 coordinates 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "duration": 0,
        "origin": Element {
          "addCommand": [Function],
          "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
          "elementId": "some-elem-123",
          "emit": [Function],
          "isReactElement": false,
          "overwriteCommand": [Function],
          "parent": Browser {
            "addCommand": [Function],
            "addLocatorStrategy": [Function],
            "capabilities": Object {
              "browserName": "mockBrowser",
              "browserVersion": "1234",
              "platformName": "node",
              "setWindowRect": true,
            },
            "overwriteCommand": [Function],
            "sessionId": "foobar-123",
          },
          "selector": "#foo",
          "sessionId": "foobar-123",
        },
        "type": "pointerMove",
        "x": 0,
        "y": 0,
      },
      Object {
        "button": 0,
        "type": "pointerDown",
      },
      Object {
        "duration": 10,
        "type": "pause",
      },
      Object {
        "duration": 10,
        "origin": "pointer",
        "type": "pointerMove",
        "x": 0,
        "y": 0,
      },
      Object {
        "button": 0,
        "type": "pointerUp",
      },
    ],
    "id": "finger1",
    "parameters": Object {
      "pointerType": "mouse",
    },
    "type": "pointer",
  },
]
`;

exports[`dragAndDrop should do a dragAndDrop 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "duration": 0,
        "origin": Element {
          "addCommand": [Function],
          "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
          "elementId": "some-elem-123",
          "emit": [Function],
          "isReactElement": false,
          "overwriteCommand": [Function],
          "parent": Browser {
            "addCommand": [Function],
            "addLocatorStrategy": [Function],
            "capabilities": Object {
              "browserName": "mockBrowser",
              "browserVersion": "1234",
              "platformName": "node",
              "setWindowRect": true,
            },
            "overwriteCommand": [Function],
            "sessionId": "foobar-123",
          },
          "selector": "#foo",
          "sessionId": "foobar-123",
        },
        "type": "pointerMove",
        "x": 0,
        "y": 0,
      },
      Object {
        "button": 0,
        "type": "pointerDown",
      },
      Object {
        "duration": 10,
        "type": "pause",
      },
      Object {
        "duration": 10,
        "origin": Element {
          "addCommand": [Function],
          "element-6066-11e4-a52e-4f735466cecf": "some-sub-elem-321",
          "elementId": "some-sub-elem-321",
          "emit": [Function],
          "isReactElement": false,
          "overwriteCommand": [Function],
          "parent": Element {
            "addCommand": [Function],
            "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
            "elementId": "some-elem-123",
            "emit": [Function],
            "isReactElement": false,
            "overwriteCommand": [Function],
            "parent": Browser {
              "addCommand": [Function],
              "addLocatorStrategy": [Function],
              "capabilities": Object {
                "browserName": "mockBrowser",
                "browserVersion": "1234",
                "platformName": "node",
                "setWindowRect": true,
              },
              "overwriteCommand": [Function],
              "sessionId": "foobar-123",
            },
            "selector": "#foo",
            "sessionId": "foobar-123",
          },
          "selector": "#subfoo",
          "sessionId": "foobar-123",
        },
        "type": "pointerMove",
        "x": 0,
        "y": 0,
      },
      Object {
        "button": 0,
        "type": "pointerUp",
      },
    ],
    "id": "finger1",
    "parameters": Object {
      "pointerType": "mouse",
    },
    "type": "pointer",
  },
]
`;

exports[`dragAndDrop should do a dragAndDrop with coordinates 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "duration": 0,
        "origin": Element {
          "addCommand": [Function],
          "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
          "elementId": "some-elem-123",
          "emit": [Function],
          "isReactElement": false,
          "overwriteCommand": [Function],
          "parent": Browser {
            "addCommand": [Function],
            "addLocatorStrategy": [Function],
            "capabilities": Object {
              "browserName": "mockBrowser",
              "browserVersion": "1234",
              "platformName": "node",
              "setWindowRect": true,
            },
            "overwriteCommand": [Function],
            "sessionId": "foobar-123",
          },
          "selector": "#foo",
          "sessionId": "foobar-123",
        },
        "type": "pointerMove",
        "x": 0,
        "y": 0,
      },
      Object {
        "button": 0,
        "type": "pointerDown",
      },
      Object {
        "duration": 10,
        "type": "pause",
      },
      Object {
        "duration": 10,
        "origin": "pointer",
        "type": "pointerMove",
        "x": 123,
        "y": 321,
      },
      Object {
        "button": 0,
        "type": "pointerUp",
      },
    ],
    "id": "finger1",
    "parameters": Object {
      "pointerType": "mouse",
    },
    "type": "pointer",
  },
]
`;
